force-app/main/default/objects/Contract_Discount__c/fields/Is_TransferPrice_Condition__c.field-meta.xml
<CustomField>
    <fullName>Is_TransferPrice_Condition__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This condition will (could) be invested for transfer price waterfall calculation (FR : Prix de cession calculation). Coming by default from Conditions library and updated by exception by the contract owner</description>
    <label>Is Transfer Price Condition</label>
    <type>Checkbox</type>
</CustomField>