force-app/main/default/objects/Contract_Discount__c/fields/Is_Yearly_Condition__c.field-meta.xml
<CustomField>
    <fullName>Is_Yearly_Condition__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Yearly Condition</label>
    <type>Checkbox</type>
</CustomField>