force-app/main/default/objects/Contract_Discount__c/fields/legal_reference__c.field-meta.xml
<CustomField>
    <fullName>legal_reference__c</fullName>
    <label>Legal reference</label>
    <type>TextArea</type>
</CustomField>