force-app/main/default/objects/Contract_Discount__c/fields/NS_Code__c.field-meta.xml
<CustomField>
    <fullName>NS_Code__c</fullName>
    <formula>Contract__r.Supplier_Nego_Scope__r.NS_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nego Scope Code</label>
    <type>Text</type>
</CustomField>