force-app/main/default/objects/Contract_Discount__c/fields/NS_Name__c.field-meta.xml
<CustomField>
    <fullName>NS_Name__c</fullName>
    <formula>Contract__r.Supplier_Nego_Scope__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nego Scope Name</label>
    <type>Text</type>
</CustomField>