force-app/main/default/objects/Contract_Discount__c/fields/OriginFromMove_amt__c.field-meta.xml
<CustomField>
    <fullName>OriginFromMove_amt__c</fullName>
    <label>Origin From Move (F)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>