force-app/main/default/objects/Contract_Discount__c/fields/OriginFromMove_Condition__c.field-meta.xml
<CustomField>
    <fullName>OriginFromMove_Condition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Origin From Move Condition</label>
    <referenceTo>Pol_Com_Condition__c</referenceTo>
    <relationshipLabel>Lignes contrats (Origin From Move Condition)</relationshipLabel>
    <relationshipName>Lignes_contrats1</relationshipName>
    <type>Lookup</type>
</CustomField>