force-app/main/default/objects/Contract_Discount__c/fields/OriginFromMove_per__c.field-meta.xml
<CustomField>
    <fullName>OriginFromMove_per__c</fullName>
    <label>Origin From Move (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>