force-app/main/default/objects/Contract_Discount__c/fields/Payment_Condition__c.field-meta.xml
<CustomField>
    <fullName>Payment_Condition__c</fullName>
    <label>Payment Condition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Payment_term_condition</valueSetName>
    </valueSet>
</CustomField>