force-app/main/default/objects/Contract_Discount__c/fields/Payment_Days__c.field-meta.xml
<CustomField>
    <fullName>Payment_Days__c</fullName>
    <label>Payment term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Payment_term_day</valueSetName>
    </valueSet>
</CustomField>