force-app/main/default/objects/Contract_Discount__c/fields/Product_Scope__c.field-meta.xml
<CustomField>
    <fullName>Product_Scope__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Product Scope</label>
    <referenceTo>NegoScope__c</referenceTo>
    <relationshipName>Contract_Conditions</relationshipName>
    <type>Lookup</type>
</CustomField>