force-app/main/default/objects/Contract_Discount__c/fields/Prog_Quantity_Actu__c.field-meta.xml
<CustomField>
    <fullName>Prog_Quantity_Actu__c</fullName>
    <formula>If(Base_Quantity_Actual_1__c = 0, Null, (Base_Quantity_Actual__c-Base_Quantity_Actual_1__c)/Base_Quantity_Actual_1__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prog Quantity Actual</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>