force-app/main/default/objects/Contract_Discount__c/fields/Prog_SellOut_Nego__c.field-meta.xml
<CustomField>
    <fullName>Prog_SellOut_Nego__c</fullName>
    <formula>if(Base_SellOut_Nego_1__c = 0, Null, (Base_SellOut_Nego__c-Base_SellOut_Nego_1__c) / Base_SellOut_Nego_1__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prog Sell Out Nego</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>