force-app/main/default/objects/Contract_Discount__c/fields/Prog_TO_Actu__c.field-meta.xml
<CustomField>
    <fullName>Prog_TO_Actu__c</fullName>
    <formula>If(Base_TO_Actual_1__c = 0, Null, (Base_TO_Actual__c-Base_TO_Actual_1__c)/Base_TO_Actual_1__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prog TO Actual</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>