force-app/main/default/objects/Contract_Discount__c/fields/Prog_TO_Nego__c.field-meta.xml
<CustomField>
    <fullName>Prog_TO_Nego__c</fullName>
    <formula>if(Base_TO_Nego_1__c = 0, Null, (Base_TO_Nego__c-Base_TO_Nego_1__c) / Base_TO_Nego_1__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prog TO Nego</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>