force-app/main/default/objects/Contract_Discount__c/fields/Proof_counterparty_description__c.field-meta.xml
<CustomField>
    <fullName>Proof_counterparty_description__c</fullName>
    <description>Describe the particular terms negotiated for the condition and its counterparties.</description>
    <inlineHelpText>Describe the particular terms negotiated for the condition and its counterparties.</inlineHelpText>
    <label>Counterparty Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>