force-app/main/default/objects/Contract_Discount__c/fields/Proof_counterparty_period__c.field-meta.xml
<CustomField>
    <fullName>Proof_counterparty_period__c</fullName>
    <description>Specify the periodicity of the dealing counterparty.</description>
    <inlineHelpText>Specify the periodicity of the dealing counterparty.</inlineHelpText>
    <label>Counterparty Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Oneshot</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>