force-app/main/default/objects/Contract_Discount__c/fields/Proof_counterparty_period_number__c.field-meta.xml
<CustomField>
    <fullName>Proof_counterparty_period_number__c</fullName>
    <description>Number of counterparty deals for the period (total event participation for ex).</description>
    <inlineHelpText>Number of counterparty deals for the period (total event participation for ex).</inlineHelpText>
    <label>Counterparty Period #</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>