force-app/main/default/objects/Contract_Discount__c/fields/Proof_counterparty_status__c.field-meta.xml
<CustomField>
    <fullName>Proof_counterparty_status__c</fullName>
    <label>Counterparty Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Opened</fullName>
            </value>
            <value>
                <fullName>Published</fullName>
            </value>
            <value>
                <fullName>Started</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>