force-app/main/default/objects/Contract_Discount__c/fields/Provision_period__c.field-meta.xml
<CustomField>
    <fullName>Provision_period__c</fullName>
    <inlineHelpText>Fréquence de provision</inlineHelpText>
    <label>Provision period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Periodicity</valueSetName>
    </valueSet>
</CustomField>