force-app/main/default/objects/Contract_Discount__c/fields/Provisioning_YE_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Provisioning_YE_Coverage__c</fullName>
    <description>Give % of the calculated amount for the condition that should be considered in theProvision planning. For exemple, if the condition give a total amount equal to 120,000€ and the down payment covarge is 80%, the total amount that should be considered for the series is equal to 120,000 * 80% = 96,000.</description>
    <label>Provisioning YE Coverage</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>