force-app/main/default/objects/Contract_Discount__c/fields/Redistribution_flow_criteria__c.field-meta.xml
<CustomField>
    <fullName>Redistribution_flow_criteria__c</fullName>
    <label>Redistribution flow criteria</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Redistribution_flow_criteria</valueSetName>
    </valueSet>
</CustomField>