force-app/main/default/objects/Contract_Discount__c/fields/Reference_condition__c.field-meta.xml
<CustomField>
    <fullName>Reference_condition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reference condition</label>
    <referenceTo>Contract_Discount__c</referenceTo>
    <relationshipName>Contract_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>