force-app/main/default/objects/Contract_Discount__c/fields/Reference_Contract__c.field-meta.xml
<CustomField>
    <fullName>Reference_Contract__c</fullName>
    <description>Filled when reference contract coming from Group</description>
    <inlineHelpText>Filled when reference contract coming from Group</inlineHelpText>
    <label>Reference Contract</label>
    <length>20</length>
    <type>Text</type>
</CustomField>