force-app/main/default/objects/Contract_Discount__c/fields/Respects_Contract_Scope__c.field-meta.xml
<CustomField>
    <fullName>Respects_Contract_Scope__c</fullName>
    <description>Check if gap exists between the contract scope and the condition scope (BU, Products, Dates).</description>
    <formula>If( AND(Product_Scope__c =  Contract__r.Supplier_Nego_Scope__c,  
        BU_Scope__c =  Contract__r.Contract_BU__c,
        Disc_BDate__c = Contract__r.Contract_BDate__c,
        Disc_EDate__c = Contract__r.Contract_EDate__c,
        OR(unit_amount__c = 0, AND(unit_amount__c &lt;&gt; 0, OR(TEXT(Unit_Amount_Type__c) = &apos;Piece&apos;, TEXT(Unit_Amount_Type__c) = &apos;UC&apos;)))) , True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Précise si la condition suit le scope du contrat ou un scope spécifique</inlineHelpText>
    <label>Respects Contract Scope</label>
    <type>Checkbox</type>
</CustomField>