force-app/main/default/objects/Contract_Discount__c/fields/Scope_BU__c.field-meta.xml
<CustomField>
    <fullName>Scope_BU__c</fullName>
    <description>List of stores defining the condition scope</description>
    <label>Scope BU</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BU</valueSetName>
    </valueSet>
</CustomField>