force-app/main/default/objects/Contract_Discount__c/fields/Scope_id__c.field-meta.xml
<CustomField>
    <fullName>Scope_id__c</fullName>
    <formula>Product_Scope__r.NS_Code_Long__c
&amp; &apos;-&apos; &amp;   BU_Scope__r.BU_Code__c
&amp; &apos;-&apos; &amp; IF(ISNULL(Disc_BDate__c), &apos;01&apos; , LPAD(TEXT(MONTH(Disc_BDate__c)), 2, &apos;0&apos;))
&amp; &apos;-&apos; &amp; IF(ISNULL(Disc_EDate__c), &apos;12&apos;, LPAD(TEXT(MONTH(Disc_EDate__c)), 2, &apos;0&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scope id</label>
    <type>Text</type>
</CustomField>