force-app/main/default/objects/Contract_Discount__c/fields/Slab_1__c.field-meta.xml
<CustomField>
    <fullName>Slab_1__c</fullName>
    <label>Slab 1 - Threshold</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>