force-app/main/default/objects/Contract_Discount__c/fields/slab_calc_method__c.field-meta.xml
<CustomField>
    <fullName>slab_calc_method__c</fullName>
    <label>Slab Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TO</fullName>
                <default>true</default>
                <label>TO</label>
            </value>
            <value>
                <fullName>Prog TO</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Inc TO</fullName>
            </value>
            <value>
                <fullName>Inc Prog TO</fullName>
            </value>
            <value>
                <fullName>Qty</fullName>
            </value>
            <value>
                <fullName>Prog Qty</fullName>
            </value>
            <value>
                <fullName>Inc Qty</fullName>
            </value>
            <value>
                <fullName>Inc Prog Qty</fullName>
            </value>
            <value>
                <fullName>Sell Out</fullName>
            </value>
            <value>
                <fullName>Prog Sell Out</fullName>
            </value>
            <value>
                <fullName>Inc Sell Out</fullName>
            </value>
            <value>
                <fullName>Inc Prog Sell out</fullName>
            </value>
            <value>
                <fullName>TO byBU</fullName>
            </value>
            <value>
                <fullName>Prog TO byBU</fullName>
            </value>
            <value>
                <fullName>Qty byBU</fullName>
            </value>
            <value>
                <fullName>Prog Qty byBU</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>