force-app/main/default/objects/Contract_Discount__c/fields/Slab_Calc_Method_TO_Origin__c.field-meta.xml
<CustomField>
    <fullName>Slab_Calc_Method_TO_Origin__c</fullName>
    <label>Slab TO Origin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Target</fullName>
            </value>
            <value>
                <fullName>Nego</fullName>
                <default>true</default>
                <label>Nego</label>
            </value>
            <value>
                <fullName>Actual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>