force-app/main/default/objects/Contract_Discount__c/fields/slab_per_2__c.field-meta.xml
<CustomField>
    <fullName>slab_per_2__c</fullName>
    <label>Slab 2 - %</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>